--- a/css.css
+++ b/css.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -17,8 +18,8 @@
     border: 1px solid black;
     padding: 25px;
     padding-top: 33px;
-    margin: 10px;
-    width: 29%;
+    margin: 18px;
+    width: 27%;
 }
 .div1 h3,.div2 h3,.div3 h3{
     display: inline;
@@ -32,7 +33,8 @@
 }
 .content{
     margin-top: 150px;
-    margin-left: 20px;
+    margin-left: 3%;
+    /* margin-right: 27px; */
 
 }
 .div1{
